@@ -1,5 +1,9 @@
 2002-09-11  Darin Adler  <darin@apple.com>
 
+        * kwq/KWQAssertions.h: Updated copy of the assertions macros (made by script).
+
+2002-09-11  Darin Adler  <darin@apple.com>
+
 	- fixed 3047552 -- crash using CFNotification calls on an NSNotification
 
         * kwq/KWQWindowWidget.mm:
